Revision history for Perl extension Net::SSH2.

0.70  2019-3-17
	- Documentation improvements.
	- SFTP stat was not reporting errors correctly (bug report and
          patch by Thomas Lochmatter).

0.69  2018-2-24
	- Fix META.yml generation (bug report by Slaven Rezic).

0.68  2017-12-13
        - Fix build when using perl 5.26 which doesn't have "." in
          @INC anymore (patch by Marc-Philip Werner).

0.67  2017-12-02
        - Fix Net::SSH2::Listener "accept" method (patch by
          Marc-Philip Werner).
        - Fix Net::SSH2::SFTP "readlink" and "realpath" methods (patch
          by Marc-Philip Werner).

0.66  2017-07-19
        - Warn about readline being called in non-blocking mode.

0.65  2017-06-14
        - Improve Travis CI testing
        - Fix perl 5.8 support
        - Warn when check_hostkey is called in void context.

0.64  2017-06-14
        - Accept debug flag on the constructor.
        - Ensure the crypto libraries are positioned after libssh2 on
          the link line (bug report and patch by Jacques Germishuys).
        - Channel "pty" method now accepts mode modifiers passed as a
          hash.
        - In connect, warnif was clobbering $! (bug report and patch
          by ikegami).
        - t/Net-SSH2.t: add support for TEST_NET_SSH2_TRACE

0.63  2016-10-13
        - die_with_error errors pointed to that method instead of its
          caller.
        - Fix case in user message.
        - Silence warning in perl 5.10.

0.62  2016-06-07
        - Code handling the conversion of arguments accepting both
          integers and constant names was broken for undef.

0.61  2016-06-03
        - "auth" method was skipping agent authentication always (bug
          report and patch by NIkolay A. Fetisov).

0.60  2016-05-23
        - Fix connecting to a custom port (bug report by Jan Gehring).

0.59_23  2016-05-19
        - Fix handling of eof in Channel read2 method.
        - Several documentation corrections.