@@ -1,4 +1,3 @@
-BUILDING.WIN32
 Changes
 const-c.inc
 const-xs.inc
